[package]
name = "pcap-parser"
version = "0.9.1"
description = "Parser for the PCAP/PCAPNG format"
license = "MIT/Apache-2.0"
keywords = ["pcap","pcapng","parser","nom"]
homepage = "https://github.com/rusticata/pcap-parser"
repository = "https://github.com/rusticata/pcap-parser.git"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]

readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2018"

include = [
  "CHANGELOG.md",
  "LICENSE-*",
  "README.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "assets/*.pcap",
  "assets/*.pcapng",
  "src/*.rs",
  "src/data/*.rs",
  "tests/*.rs"
]

[features]
default = []

# include parsers for data (depending on linktype)
data = []
# add support for writing blocks
serialize = ["cookie-factory"]

[package.metadata.docs.rs]
features = [ "data", "serialize" ]
all-features = true

[dependencies]
circular = "0.3"
cookie-factory = { version="0.3.0", optional=true }
nom = "5.0"
rusticata-macros = "2.0.3"

[dev-dependencies]
hex-literal = "0.2"

[badges]
travis-ci = { repository = "rusticata/pcap-parser" }
