[package]
name = "pcap-parser"
version = "0.16.0"
description = "Parser for the PCAP/PCAPNG format"
license = "MIT/Apache-2.0"
keywords = ["pcap","pcapng","parser","nom"]
homepage = "https://github.com/rusticata/pcap-parser"
repository = "https://github.com/rusticata/pcap-parser.git"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]

readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2018"
rust-version = "1.63"

include = [
  "CHANGELOG.md",
  "LICENSE-*",
  "README.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "assets/*.pcap",
  "assets/*.pcapng",
  "examples/*.rs",
  "src/*.rs",
  "src/data/*.rs",
  "src/pcap/*.rs",
  "src/pcapng/*.rs",
  "tests/*.rs"
]

[features]
default = []

# include parsers for data (depending on linktype)
data = []
# add support for writing blocks
serialize = ["cookie-factory"]

[package.metadata.docs.rs]
features = [ "data", "serialize" ]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
circular = "0.3"
cookie-factory = { version="0.3.0", optional=true }
nom = "7.0"
rusticata-macros = "4.0"

[dev-dependencies]
criterion = { version="0.5", features=["html_reports"] }
hex-literal = "0.4"
pprof = { version="0.14", features=["criterion","flamegraph","protobuf-codec"] }

[[bench]]
name = "pcap"
harness = false

[[bench]]
name = "pcapng"
harness = false

[[bench]]
name = "profile_pcapng"
harness = false

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  "nom",
  "nom::*",
  "circular::Buffer",
]
